# TradingEngine

./: .gitignore  CMakeLists.txt  README.md
fixParser/: CMakeLists.txt  README.md  fixParser.cpp  fixParser_main.cpp
ingressGateway/: CMakeLists.txt  Quote.cpp  Quote.hpp  README.md  Spot.cpp  Spot.hpp  ingressGateway_main.cpp
ingressGateway/utils/: curl_utils.cpp  curl_utils.hpp  time_utils.cpp  time_utils.hpp
marketDataConsumer/: CMakeLists.txt  README.md  mdp-main.cpp
orderbook/: CMakeLists.txt  OrderBook.cpp  OrderBook.hpp  README.md  orderbook_main.cpp  orders.hpp
orderbookv2/: CMakeLists.txt
orderbookv2/include/: enums.hpp  helpers.hpp  order.hpp  orderbook.hpp
orderbookv2/src/: helpers.cpp  orderbook.cpp  orderbookv2_main.cpp
utils/: CMakeLists.txt  README.md  macros.hpp
utils/memoryPool/: CMakeLists.txt  memoryPool_example.cpp  memory_pool.hpp
utils/threads/: CMakeLists.txt  thread_utils.hpp  threads_example.cpp
